update controller middlewares
