# src/modules/auth/dtos/ForgotPasswordDTO.ts
@@ -1,0 +1,8 @@
+import { IsDefined, IsEmail, IsNotEmpty } from "class-validator";
+
+export class ForgotPasswordDTO {
+	@IsDefined()
+	@IsNotEmpty()
+	@IsEmail({}, { message: "Invalid email address" })
+	email: string;
+}
